# wizrd

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  wizrd_config.h.in
Testing/: CMakeLists.txt  base64_test.cpp  request_handler_test.cpp  url_test.cpp  url_tests.cpp
internal_webserver/: CMakeLists.txt  connection.cpp  connection.h  connectionmanager.cpp  connectionmanager.h  request.h  requestparser.cpp  requestparser.h  server.h
src/: main.cpp
src/utils/: CMakeLists.txt  base64.cpp  base64.h  exceptions.h  url.cpp  url.h
tests/: request_handler_test.cpp  url_test.cpp
